few corrections to singUp page

--- a/loginRegistration.html
+++ b/loginRegistration.html
@@ -28,7 +28,7 @@
                             <div class="col-12 mt-3 text-align-center">
                                 <h3 class="mb-4 font-heading-custom font-weight-bold">Sign in with email</h3>
                                 <p class="font-text-custom">Enter the email address associated with<br> your account, and we'll send a magic link<br> to your inbox</p>
-                                <label for="email" class="mt-5 font-text-custom">Your email</label>
+                                <label for="email" class="mt-4 font-text-custom">Your email</label>
                                 <br>
                                 <input id="email" type="text" class="input-email text-align-center mt-1">
                                 <br>
@@ -51,15 +51,19 @@
                 <div class="modal-body">
                     <div class="container">
                         <div class="row">
-                            <div class="col-12 mb-5">
+                            <div class="col-12 mb-4">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <div class="col-12 mt-3 text-align-center">
+                            <div class="col-12 mt-4 text-align-center">
                                 <h3 class="mb-4 font-heading-custom font-weight-bold">Sign up with email</h3>
                                 <p class="font-text-custom">Enter your email address to create an<br>account</p>
-                                <label for="email" class="mt-5 font-text-custom">Your email</label>
+                                <label for="email" class="mt-4 font-text-custom">Your Name</label>
+                                <br>
+                                <input id="email" type="text" class="input-email text-align-center mt-1">
+                                <br>
+                                <label for="email" class="mt-4 font-text-custom">Your email</label>
                                 <br>
                                 <input id="email" type="text" class="input-email text-align-center mt-1">
                                 <br>
@@ -68,7 +72,7 @@
                                 <input id="password" type="password" class="input-email text-align-center mt-1">
                                 <br>
                                 <button class="mt-5 button-continue font-text-custom">Continue</button>
-                                <p class="mt-4 mb-5 font-text-custom">No account? <a href="#" class="a-link" type="button" data-toggle="modal" data-target="#signIn" data-dismiss="modal">Sign in</a></p>
+                                <p class="mt-4 font-text-custom">Already have an account? <a href="#" class="a-link" type="button" data-toggle="modal" data-target="#signIn" data-dismiss="modal">Sign in</a></p>
                             </div>
                         </div>
                     </div>
