--- a/index.html
+++ b/index.html
@@ -29,12 +29,53 @@
 				font-size: 23px;
 				font-weight: 500;
 			}
+
+			.small-button {
+                padding: 8px 30px;
+				font-size: 15px;
+				font-weight: 300;
+            }
+
+            #navbar {
+                height: 76px;
+                background-color: rgba(255, 255, 255, 0.9);
+            }
+
+			#navbar > span {
+                margin-left: 130px;
+                font-weight: bold;
+                font-size: 30px;
+                
+            }
+
+            #navbar > ul {
+                margin-right: 130px;
+			}
 		</style>
 	</head>
 	<body>
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse fixed-top navbar-collapse justify-content-end" id="navbar">
+                <span class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</span>
+                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark mr-3" href="#">Write</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
+                    </li>
+                    <a class="btn btn-lg big-button text-white background-success-custom align-center small-button" href="loginRegistration.html">Get Started</a>
+                </ul>
+            </div>
+		</nav>
+		
 		<div class="container">
-			<h1 class="font-heading-custom text-dark-custom text-center big-font">Dive deeper on topics that matter to you.</h1>
-			<h2 class="font-text-custom text-dark-custom text-center medium-font">Select what you're into We'll help you find great things to read.</h2>
+			<h1 class="font-heading-custom text-dark-custom text-center big-font">Dive deeper on topics that<br> matter to you.</h1>
+			<h2 class="font-text-custom text-dark-custom text-center medium-font">Select what you're into We'll help you find<br> great things to read.</h2>
 			<div class="m-3 d-flex tag-font flex-wrap justify-content-center">
 				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
 					<div class="rounded-circle background-dark-custom text-white px-2">
