--- a/loginRegistration.html
+++ b/loginRegistration.html
@@ -17,9 +17,9 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 mb-5">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <a type="button" class="close" aria-label="Close" href="index.html">
                                     <span aria-hidden="true">&times;</span>
-                                </button>
+                                </a>
                             </div>
                             <div class="col-12 mt-3 text-align-center">
                                 <h3 class="mb-4 font-heading-custom font-weight-bold">Sign in with email</h3>
@@ -48,9 +48,9 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12 mb-4">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <a type="button" class="close" href="index.html" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
-                                </button>
+                                </a>
                             </div>
                             <div class="col-12 mt-4 text-align-center">
                                 <h3 class="mb-4 font-heading-custom font-weight-bold">Sign up with email</h3>
