bloag data display

--- a/blog.html
+++ b/blog.html
@@ -34,15 +34,15 @@
 	</head>
 	<body>
 		<div class="container container-custom">
-            <h1 class="font-heading-custom text-dark-custom medium-font mt-5">Coronavirus May Be a Blood Vessel Disease, Which Explains Everything</h1>
+            <h1 class="font-heading-custom text-dark-custom medium-font mt-5" id="blogHeading">Coronavirus May Be a Blood Vessel Disease, Which Explains Everything</h1>
             <div class="my-3 d-flex align-items-center">
                 <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 35px;" aria-hidden="true"></i>
-               <div>
+               <div id="creatorNameTop">
                     Dana G Smith
                     <div class="text-light-custom small">May 29</div>
                </div>
             </div>
-            <div class="blog-content font-heading-custom">
+            <div class="blog-content font-heading-custom" id="blogContent">
                  April, blood clots emerged as one of the many mysterious symptoms attributed to Covid-19, a disease that had initially been thought to largely affect the lungs in the form of pneumonia. Quickly after came reports of young people dying due to coronavirus-related strokes. Next it was Covid toes — painful red or purple digits.<br/>
                  What do all of these symptoms have in common? An impairment in blood circulation. Add in the fact that 40% of deaths from Covid-19 are related to cardiovascular complications, and the disease starts to look like a vascular infection instead of a purely respiratory one.<br/>
                  Months into the pandemic, there is now a growing body of evidence to support the theory that the novel coronavirus can infect blood vessels, which could explain not only the high prevalence of blood clots, strokes, and heart attacks, but also provide an answer for the diverse set of head-to-toe symptoms that have emerged.<br/>
@@ -134,19 +134,21 @@
         </div>
         <div class="p-5 background-black-custom"></div>
 		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"
 		></script>
 		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"
 		></script>
 		<script
 			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 			crossorigin="anonymous"
-		></script>
+        ></script>
+        <script type="module" src="js/blog.js"></script>
+        
 	</body>
 </html>
