--- a/js/modules/dummyDataStore.html
+++ b/js/modules/dummyDataStore.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <script src="blogJSON.js"></script>
-    <script src="blogModule.js"></script>
+    <script src="userJSON.js"></script>
 </body>
 </html>
