blog data fetch added

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
             <hr class="text-light-custom">
             <div class="my-3 d-flex align-items-center">
                 <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 75px;" aria-hidden="true"></i>
-               <div>
+               <div id="creatorNameBottom">
                    <div class="text-light-custom">
                        WRITTEN BY
                    </div>
