render index tags and minor fixes

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 			<div id="dummyDivForMargin"></div>
 			<h1 class="font-heading-custom text-dark-custom text-center big-font">Dive deeper on topics that<br> matter to you.</h1>
 			<h2 class="font-text-custom text-dark-custom text-center medium-font">Select what you're into We'll help you find<br> great things to read.</h2>
-			<div class="m-3 d-flex tag-font flex-wrap justify-content-center">
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
+			<div class="m-3 d-flex tag-font flex-wrap justify-content-center" id="tags">
+				<div class="rounded-pill background-light-custom d-flex px-3 py-2 m-2 align-items-center" >
 					<div class="rounded-circle background-dark-custom text-white px-2">
 						#
 					</div>
 					<div class="ml-2">
-						Technology
+						<a class="text-light-custom remove-link-format" href="topicBlogs.html">Technology</a>
 					</div>
 				</div>
 				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
@@ -172,6 +172,7 @@
             </h1>
 		</div>
         <div class="p-5 background-black-custom"></div>
+        <script type="module" src="js/index.js"></script>
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
