modified login fn to set userId as activeUser, publish takes to indexpage

--- a/writeBlog.html
+++ b/writeBlog.html
@@ -47,7 +47,7 @@
                             <div class="col-12">
                                 <h6 class="text-dark-custom">Add or change tags (up to 5)<br> so readers know what your story is about.</h6>
                                 <textarea class="input-title" style="border-bottom: 1px solid black;"  id="tagsList"></textarea>
-                                <button class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3" id="publishBtn" data-dismiss="modal">Publish</button>
+                                <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3" id="publishBtn" href="index.html">Publish</a>
                             </div>
                         </div>
                     </div>
