--- a/writeBlog.html
+++ b/writeBlog.html
@@ -6,7 +6,7 @@
     <title>Write Blog</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="css/basic.css" rel="stylesheet">
-    <link href='https://css.gg/user.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .input-title {
             width: 100%;
@@ -64,9 +64,8 @@
                     <button class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" data-toggle="modal" data-target="#tags" type="button">Publish</button>
                 </li>
                 <li class="nav-item">
-                    <h3 class="mt-2 ml-5 d-sm-none d-md-block text-dark-custom font-heading-custom font-weight-bold">Manideep</h3>
+                    <h3 class="mt-2 ml-5 d-sm-none d-md-block text-dark-custom font-heading-custom font-weight-bold">Manideep<i class="fa fa-user-circle ml-4 mr-3" style="font-size: 35px;" aria-hidden="true"></i></h3>
                 </li>
-                <i class="gg-user mt-3 ml-4 d-sm-none d-md-block"></i>
             </ul>
         </div>
     </nav>
