added modal to dismiss anonymous user to write

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
-                <span class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</span>
+                <a class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
                 <ul class="nav navbar-nav  mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark mr-3" href="#">Write</a>
+                        <a class="nav-link text-dark mr-3" href="writeBlog.html">Write</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
