--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
-		/>
+        />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        
 		<style>
 			.big-font {
 				font-size: 70px;
@@ -34,17 +36,17 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
                 <span class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</span>
-                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+                <ul class="nav navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link text-dark mr-3" href="#">Write</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="d-flex align-items-baseline" id="navbarRight">
                         <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
+                        <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
                     </li>
-                    <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
                 </ul>
             </div>
 		</nav>
