added navbar to all pages and navabar fix

--- a/writeBlog.html
+++ b/writeBlog.html
@@ -49,7 +49,7 @@
             </a>
             </div>
             <div class="modal-body">
-                Let me know where to store your blog.
+                You are not logged in..Please login first
             </div>
             <div class="modal-footer">
             <a type="button" class="btn btn-primary" href="loginRegistration.html">Sign In</a>
@@ -76,20 +76,22 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0 mt-2" id="navbar">
-            <a class="navbar-brand font-weight-bold mr-auto font-heading-custom" href="index.html">Medium Clone</a>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
+            <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
             <ul class="nav navbar-nav  mt-2 mt-lg-0">
                 <li class="nav-item">
                     <button class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" data-toggle="modal" data-target="#tags" type="button">Publish</button>
                 </li>
-                <li class="nav-item">
-                    <h3 class="mt-2 ml-5 d-sm-none d-md-block text-dark-custom font-heading-custom font-weight-bold">Manideep<i class="fa fa-user-circle ml-4 mr-3" style="font-size: 35px;" aria-hidden="true"></i></h3>
+                <li class="d-flex align-items-baseline" id="navbarRight">
+                    <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
+                    <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
                 </li>
             </ul>
         </div>
     </nav>
-
 
 
     <div id="dummyDivForMargin"></div>
