--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,22 @@
 		</style>
 	</head>
 	<body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
+                <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
+                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark mr-3" href="writeBlog.html">Write</a>
+                    </li>
+                    <li class="d-flex align-items-baseline" id="navbarRight">
+                        <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
+                        <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
+        <div id="dummyDivForMargin"></div>
 		<div class="container container-custom">
             <h1 class="font-heading-custom text-dark-custom medium-font mt-5" id="blogHeading">Coronavirus May Be a Blood Vessel Disease, Which Explains Everything</h1>
             <div class="my-3 d-flex align-items-center">
