--- a/topicBlogs.html
+++ b/topicBlogs.html
@@ -14,6 +14,22 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
+                <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
+                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark mr-3" href="writeBlog.html">Write</a>
+                    </li>
+                    <li class="d-flex align-items-baseline" id="navbarRight">
+                        <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
+                        <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
+        <div id="dummyDivForMargin"></div>
 		<div class="container">
             <div class="row my-3">
                 <div class="col-12 col-md-8 order-2 order-md-1">
